--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.8",
     "morgan": "~1.9.1"
   }
